--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ gluonts==0.13.2
 mlflow==2.5.0
 ksql-query-builder @ git+https://github.com/SENERGY-Platform/ksql-query-builder
 boto3==1.34.77
+ksql==0.10.2 
