--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ mlflow==2.11.1
 ksql-query-builder @ git+https://github.com/SENERGY-Platform/ksql-query-builder
 boto3==1.34.77
 ksql==0.10.2 
+httpx==0.27.0
