--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ gluonts==0.13.2
 mlflow==2.11.1
 ksql-query-builder @ git+https://github.com/SENERGY-Platform/ksql-query-builder
 boto3==1.34.77
-httpx==0.27.0
+httpx[http2]==0.27.0
